k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app
  namespace: m
  labels:
    app: otus-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: jvmisalive/otus-docker-hub:0.0.5
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: app-config
