k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
  namespace: m
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
